--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 # Habilitamos que cargue los datos de prueba en la base de datos
 spring.jpa.defer-datasource-initialization=true
+
+#JWT Configuración de secreto y tiempo de token
+jwt.secret=TecolegustaG2?$
+jwt.token-expiration=3600
