--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.jpa.defer-datasource-initialization=true
 #JWT Configuración de secreto y tiempo de token
 jwt.secret=TecolegustaG2?$
 jwt.token-expiration=3600
+
+upload.location = uploads
